--- a/pro_epacs_edecottena_backend/web/admin_login/Creative_Login_Form/style.css
+++ b/pro_epacs_edecottena_backend/web/admin_login/Creative_Login_Form/style.css
@@ -28,7 +28,7 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 body {
-    background: url(../imgs/1920x1080.jpg)no-repeat;
+    background: url(../..//com.fundamental/images/admin_login/bg_01.jpg)no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
