--- a/pro_epacs_edecottena_backend/web/com.fundamental/css/my_styles.css
+++ b/pro_epacs_edecottena_backend/web/com.fundamental/css/my_styles.css
@@ -186,3 +186,14 @@ img {
 .single-panel-title{
     margin-left: 20px;
 }
+
+
+#nav_item_summary{
+    padding-bottom: 80px;
+}
+
+
+.lang_flag{
+    width: 25px;
+    margin-right: 20px;
+}
